--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -311,6 +311,7 @@
         <activity
             android:name=".activities.SaleWithPosActivity"
             android:label="@string/title_activity_points_sale_with_pos"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -320,6 +321,7 @@
         <activity
             android:name=".activities.SaleWithoutPosActivity"
             android:label="@string/title_activity_sale_without_pos"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -356,10 +358,12 @@
         <activity
             android:name=".activities.PosSaleConfirmationActivity"
             android:label="@string/title_activity_pos_sale_confirmation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.SaleWithoutPosConfirmationActivity"
             android:label="@string/title_activity_sale_without_pos_confirmation"
+            android:screenOrientation="portrait"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
