--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -311,8 +311,8 @@
         <activity
             android:name=".activities.SaleWithPosActivity"
             android:label="@string/title_activity_points_sale_with_pos"
-            android:screenOrientation="portrait"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -321,8 +321,8 @@
         <activity
             android:name=".activities.SaleWithoutPosActivity"
             android:label="@string/title_activity_sale_without_pos"
-            android:screenOrientation="portrait"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -363,12 +363,30 @@
         <activity
             android:name=".activities.SaleWithoutPosConfirmationActivity"
             android:label="@string/title_activity_sale_without_pos_confirmation"
+            android:parentActivityName=".activities.MerchantBackOfficeActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.SalesOrderListActivity"
+            android:label="@string/title_salesorder_list"
             android:parentActivityName=".activities.MerchantBackOfficeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.SalesOrderDetailActivity"
+            android:label="@string/title_salesorder_detail"
+            android:parentActivityName=".activities.SalesOrderListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.loystar.loystarbusiness.activities.SalesOrderListActivity" />
         </activity>
     </application>
 
