--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ ext {
     firebaseVersion = "11.6.2"
     requeryVersion = "1.4.0"
     permissionsDispatcherVersion = "2.4.0"
+    butterKnifeVersion = "8.8.1"
 }
 
 dependencies {
@@ -139,6 +140,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.jakewharton.timber:timber:4.6.0'
+    implementation "com.jakewharton:butterknife:${butterKnifeVersion}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     implementation 'com.github.armcha:Vertical-Intro:2.0.0'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
