--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,6 +156,7 @@
             android:theme="@style/VerticalIntroStyle" />
         <activity
             android:name=".activities.SettingsActivity"
+            android:launchMode="singleTop"
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".activities.CustomerListActivity"
