--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,6 +130,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.SmoochActivityLauncher"
+            android:label="@string/pref_support_title"/>
+        <activity
             android:name=".activities.MerchantBackOfficeActivity"
             android:label="@string/title_activity_merchant_back_office"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -156,7 +159,6 @@
             android:theme="@style/VerticalIntroStyle" />
         <activity
             android:name=".activities.SettingsActivity"
-            android:launchMode="singleTop"
             android:label="@string/title_activity_settings" />
         <activity
             android:name=".activities.CustomerListActivity"
