add MorochoRochaDarwin:OneCalendarView lib.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -384,6 +384,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.SalesOrderListActivity" />
         </activity>
+        <activity
+            android:name=".activities.SalesHistoryActivity"
+            android:label="@string/title_activity_sales_history"
+            android:parentActivityName=".activities.MerchantBackOfficeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity" />
+        </activity>
     </application>
 
 </manifest>
