--- a/app/build.gradle
+++ b/app/build.gradle
@@ -160,6 +160,7 @@ dependencies {
     implementation group: 'com.mixpanel.android', name: 'mixpanel-android', version: '5.2.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.github.MorochoRochaDarwin:OneCalendarView:3.1.1'
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     implementation 'com.onesignal:OneSignal:3.6.5'
