refactor sale without pos flow.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <meta-data
             android:name="asset_statements"
             android:resource="@string/asset_statements" />
+
         <provider
             android:name=".auth.sync.StubProvider"
             android:authorities="co.loystar.loystarbusiness.provider"
@@ -118,8 +119,8 @@
             android:name=".utils.GenericFileProvider"
             android:authorities="${applicationId}.co.loystar.loystarbusiness.provider"
             android:exported="false"
-            tools:replace="android:authorities"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
@@ -297,7 +298,6 @@
             android:label="@string/title_activity_confirm_password_reset"
             android:parentActivityName=".activities.ForgotPasswordActivity"
             android:theme="@style/AppTheme.NoActionBar">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.ForgotPasswordActivity" />
@@ -309,9 +309,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
                     android:host="loystar-api.herokuapp.com"
-                    android:pathPrefix="/reset_password" />
+                    android:pathPrefix="/reset_password"
+                    android:scheme="https" />
             </intent-filter>
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
@@ -320,12 +320,10 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="http"
                     android:host="app.loystar.co"
-                    android:pathPrefix="/reset_password" />
+                    android:pathPrefix="/reset_password"
+                    android:scheme="http" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".activities.AddProductActivity"
@@ -424,6 +422,15 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="co.loystar.loystarbusiness.activities.MerchantBackOfficeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.AddPointsActivity"
+            android:label="@string/title_activity_add_points"
+            android:parentActivityName=".activities.SaleWithoutPosActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="co.loystar.loystarbusiness.activities.SaleWithoutPosActivity" />
         </activity>
     </application>
 
